# tysight_v2

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.openhands/microagents/: vector_rails.md
handoff/: capsule.md  master_spec.md  new_chat_bundle.md  spec_extract.md  status.json
insight_agent/: __init__.py
insight_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: oh_gh.py
streamlit_app/: Home.py  __init__.py
streamlit_app/pages/: 01_Kinds.py  02_Instances.py  03_Ask_and_Analyze.py  04_Runs.py  05_Settings.py
tools/: bundle_new_chat.py  handoff_build_capsule.py  handoff_build_docs.py  handoff_update_status.py
